Kubernetes/learn/ingress/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-ingress
  ports:
  - port: 80
    targetPort: 80
  - port: 443
    targetPort: 443
